nginx-istio/istio/envoyfilter.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: test-policy
  namespace: istio-system
spec:
  workloadSelector:
    labels:
      istio: ingressgateway
  configPatches:
    # The first patch adds the lua filter to the listener/http connection manager
  - applyTo: HTTP_FILTER
    match:
      context: GATEWAY
      listener:
        filterChain:
          filter:
            name: "envoy.filters.network.http_connection_manager"
            subFilter:
              name: "envoy.filters.http.router"
    patch:
      operation: INSERT_BEFORE
      value: # lua filter specification
       name: envoy.config.filter.network.custom_protocol
       typed_config:
         "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua
         inlineCode: |
            function envoy_on_request(request_handle)
              local path = request_handle:headers():get(":path")
              request_handle:logInfo("Current path is: "..path)

              local req_authority = string.lower(request_handle:headers():get(":authority"))
              request_handle:logInfo("Current Host is: "..req_authority)

              request_handle:headers():replace("X-UiPath-Org", "mjorg")
            end
